[package]
authors = ["Vilgot Fredenberg <vilgot@fredenberg.xyz>"]
description = "Discord bot for voice channel member pruning"
edition = "2021"
keywords = ["bot", "discord", "twilight"]
license = "0BSD"
name = "voice-pruner"
repository = "https://github.com/vilgotf/voice-pruner"
rust-version = "1.65"
version = "2.3.0"

[dependencies]
anyhow = "1"
clap = { features = ["derive"], version = "4" }
futures-util = "0.3"
once_cell = "1.13.0"
tokio = { features = ["macros", "rt", "signal"], version = "1" }
tracing = "0.1"
tracing-subscriber = "0.3"
twilight-cache-inmemory = { features = [
	"permission-calculator",
], version = "0.15.0-rc.1" }
twilight-gateway = { default-features = false, features = [
	"twilight-http",
	"zlib-stock",
], version = "0.15.0-rc.1" }
twilight-http = { default-features = false, features = [
	"decompression",
], version = "0.15.0-rc.1" }
twilight-model = "0.15.0-rc.1"
twilight-util = { features = ["builder"], version = "0.15.0-rc.1" }

[features]
default = ["native-tls"]
native-tls = ["twilight-gateway/native", "twilight-http/native"]
rustls-native-roots = [
	"twilight-gateway/rustls-native-roots",
	"twilight-http/rustls-native-roots",
]
rustls-webpki-roots = [
	"twilight-gateway/rustls-webpki-roots",
	"twilight-http/rustls-webpki-roots",
]

[profile.release]
lto = true
strip = true
