[package]
authors = ["Tim Vilgot Mikael Fredenberg <vilgot.fredenberg@proton.me>"]
description = "Discord bot for voice channel member pruning"
edition = "2021"
keywords = ["bot", "discord", "twilight"]
license = "0BSD"
name = "voice-pruner"
repository = "https://github.com/vilgotf/voice-pruner"
rust-version = "1.65"
version = "2.4.1"

[dependencies]
anyhow = "1"
futures-util = "0.3"
once_cell = "1.13.0"
tokio = { version = "1.26.0", features = ["macros", "rt", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
twilight-cache-inmemory = { version = "0.15.1", features = [
	"permission-calculator",
] }
twilight-gateway = { version = "0.15.1", default-features = false, features = [
	"zlib-stock",
] }
twilight-http = { version = "0.15", default-features = false, features = [
	"decompression",
] }
twilight-model = "0.15"
twilight-util = { version = "0.15", features = ["builder"] }

[features]
default = ["native-tls"]
native-tls = ["twilight-gateway/native", "twilight-http/native"]
rustls-native-roots = [
	"twilight-gateway/rustls-native-roots",
	"twilight-http/rustls-native-roots",
]
rustls-webpki-roots = [
	"twilight-gateway/rustls-webpki-roots",
	"twilight-http/rustls-webpki-roots",
]

[profile.release]
lto = true
strip = true
