[package]
edition = "2021"
license = "0BSD"
name = "voice-pruner"
repository = "https://github.com/vilgotf/voice-pruner"
rust-version = "1.70"
version = "2.4.1"

[dependencies]
anyhow = "1"
futures-util = "0.3"
tokio = { version = "1.26.0", features = ["macros", "rt", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
twilight-cache-inmemory = { version = "0.16.0-rc.1", features = [
    "permission-calculator",
] }
twilight-gateway = { version = "0.16.0-rc.1", default-features = false, features = [
    "zlib-stock",
] }
twilight-http = { version = "0.16.0-rc.1", default-features = false, features = [
    "decompression",
] }
twilight-model = "0.16.0-rc.1"
twilight-util = { version = "0.16.0-rc.1", features = ["builder"] }

[features]
default = ["native-roots"]
native-roots = [
    "twilight-gateway/rustls-native-roots",
    "twilight-http/rustls-native-roots",
]
webpki-roots = [
    "twilight-gateway/rustls-webpki-roots",
    "twilight-http/rustls-webpki-roots",
]

[profile.release]
lto = true
strip = true
